<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".App.LogInActivity">

    <include layout="@layout/toolbar"/>

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:layout_below="@+id/toolbar">

        <TextView
            android:id="@+id/lbl_please_log_in"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textSize="20sp"
            android:text="@string/please_log_in_"/>

        <EditText
            android:id="@+id/login_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/acc_id"
            android:maxLength="30"
            android:layout_below="@+id/lbl_please_log_in"
            android:importantForAutofill="yes"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:maxLength="200"
            android:layout_below="@+id/login_id"
            android:importantForAutofill="yes"
            android:inputType="textPassword"/>

        <CheckBox
            android:id="@+id/login_keep_logged_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_password"
            android:layout_marginTop="10dp"
            android:text="@string/keep_logged_in"
            android:enabled="false"/>

        <Button
            android:id="@+id/login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_keep_logged_in"
            android:enabled="false"
            android:text="@string/login"/>

        <TextView
            android:id="@+id/forgot_password"
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:layout_below="@+id/login_login"
            android:layout_centerHorizontal="true"/>

        <ProgressBar
            android:id="@+id/login_in_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/login_login"
            android:visibility="gone"/>

        <Button
            android:id="@+id/login_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_q"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</RelativeLayout>