<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <TextView
            android:id="@+id/heading_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:lines="1"
            android:ellipsize="end"
            android:layout_below="@+id/heading_details"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:maxLines="4"
            android:ellipsize="marquee"
            android:layout_below="@+id/name"/>

        <TextView
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/description"/>

        <TextView
            android:id="@+id/last_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/id"/>

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_below="@+id/last_update"
            android:layout_marginTop="10dp"
            android:text="@string/state_unlocked"
            android:textColor="@color/unlocked"
            android:textStyle="bold"/>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/status_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/status"
            android:layout_alignBottom="@+id/status"
            app:srcCompat="@drawable/lock_open"
            android:tint="@color/unlocked"/>

        <RelativeLayout
            android:id="@+id/seperator01"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_light"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/status"/>

        <LinearLayout
            android:id="@+id/container_lat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_below="@+id/seperator01">

            <TextView
                android:id="@+id/lbl_lat"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/lat_" />

            <TextView
                android:id="@+id/lat"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_lng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_below="@+id/container_lat">

            <TextView
                android:id="@+id/lbl_lng"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/lng_"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/lng"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_alt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_below="@+id/container_lng">

            <TextView
                android:id="@+id/lbl_alt"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/alt_"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/alt"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_below="@+id/container_alt">

            <TextView
                android:id="@+id/lbl_speed"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/speed_"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/speed"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:layout_below="@+id/container_speed"/>
    </RelativeLayout>
</ScrollView>